  documentation, or the docstrings in ``paste.httpserver``.  This
  catches worker threads (and WSGI apps) that take too long to
  complete their task; killing them eventually, adding more worker
  threads when the pool is exhausted and it doesn't look good that
  it'll clear soon, and optionally killing the process when there are
  too many lost/zombie threads.

* In ``paste.exceptions`` always call ``start_response``; may help
  problems when there is an exception in ``start_response`` itself.

* Added method to ``paste.registry.StackedObjectProxy``,
  ``_object_stack()``, which returns a list of all the registered
  objects.  Useful if you want to search through the effective history
  of a stacked object.

* Fixed infinite recursion problem with
  ``paste.request.EnvironHeaders.keys()``.

* Fix ``paste.wsgiwrappers.WSGIRequest.urlvars`` to use
  ``wsgiorg.routing_args``

1.3
---

* In ``paste.httpserver`` remove the reverse DNS lookup to set
  ``REMOTE_HOST``

* In ``paste.fileapp``, if the client sends both If-None-Match and
  If-Modified-Since, prefer If-None-Match.  Make ETags include the
  size as well as last modified timestamp.  Make it possible to
  override how mimetypes are guessed.

* ``HTTPException`` objects now have a ``exc.response(environ)``
  method that returns a ``WSGIResponse`` object.

* ``egg:Paste#watch_threads`` will show tracebacks of each thread
  under Python 2.5.

* Made ``paste.util.template`` trim whitespace around statements that
  are on their own line.

* ``paste.fileapp.DataApp`` now accepts ``allowed_headers=[...]`` to
  specify the allowed headers.  By default only ``GET`` and ``HEAD``
  are allowed.

* Added ``paste.util.import_string.try_import_module``, which imports
  modules and catches ``ImportError``, but only if it's an error
  importing the specific module, not an uncaught ``ImportError`` in
  the module being imported. 

1.2.1
-----

* ``paste.httpserver`` didn't implement the ``readline`` that the